# flappy_bear

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  install-environment-linux.sh  install-environment-ubuntu.sh  install-sdl-linux.sh  main.cpp  output
config/: config.hpp
include/: background.hpp  collidable.hpp  game_entity.hpp  geometry.hpp  obstacle.hpp  player.hpp  score_manager.hpp  text_view.hpp  texture.hpp  timer.hpp  utils.hpp  world.hpp
src/: CMakeLists.txt  background.cpp  collidable.cpp  game_entity.cpp  geometry.cpp  main.cpp  obstacle.cpp  player.cpp  score_manager.cpp  text_view.cpp  texture.cpp  timer.cpp  utils.cpp  world.cpp
tests/: CMakeLists.txt  unit_tests.cpp
